--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -52,6 +52,16 @@
 	The value of this system is…
 	What we have achieved 
 	\section{Requirements} %What is needed for the project to be succesful 
+	Our purpose is to develop the traffic simulator related to real traffic system and user requirement . Traffic simulation is a well-established field with several ways to achieve it and gain different feedback.           Considering the group work project as well as peer assessment, we made a initial plan at very beginning quickly based on each member’s specific ability and individual background. After our first meeting, we separate the project with schedules according to agile software development principles. It can be generally described as follow :
+1)	Initiation , analysis and risk management related to requirements that define our project and work to do.
+ In this case, we need to build a traffic simulate software our own which can also conveniently collect some user requirement and then generate feedback. To be more specific, it means a general map with at least simple straight roads, round roads, cross roads as well as traffic lights and so on.
+2)	Planning , containing the schedule and priorization of work.
+As our consideration, the round road may be the most difficult and complex part in this project. So we decide to solve this part first while trying to implement crossroads with traffic lights to determine car movements, then the combination of several kinds of roads after complete each part of them successfully.  
+3)	Development, including designing the scope which we need to keep track to, and implementation, porting with verification of each units to make sure the correction and integrating after that. If it can goes well so far, then perform corrective improvement towards the whole system to check all the function.
+4)	Deliver the product and final report, which may go through with the progress at first to record everything we need then generate the final paper about our group work software and make peer assessment in this case as needed.
+After setting our first plan.
+
+
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
 	\section{System Design}
 	\subsection{User Manual}
