Updates Final Report
A new sections

--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -68,6 +68,27 @@ After setting our first plan.
 
 
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
+	
+	History: 
+in the past years traffic simulation models played a very important role in the performance and facilities of the road traffic. the simulation traffic models can be used in many road development process.
+Only in the United Kingdom vehicle traffic has been in a rise to 2.1 per cent comparing to the previous year 2014, the government figures shown that 310.2 billions miles for the travelled vehicles in all the road in the United Kingdom only in year 2014.  
+Some initial government reports shows that the increased traffic raised in a four areas like services, manufacturing, production and construction. only in year 2014, that was a growth comparing to the previous year 2013.
+
+U.K Traffic Congestion 
+
+Traffic congestion has been always a big problem on the roads of many countries, almost the whole world. 
+
+
+Current: 
+The current technologies has considered many aspects like ;
+
+speed: the street maximum speed, speed between cars. 
+overtake: How many lanes, overtake allowed or not.
+Restrictions: whether route restrictions or changing lanes 
+Traffic Flow control: for ramps and round about, and any intersection.
+
+But the nobody has brought any idea about if the traffic flow has increased or any future upgrade like connecting the current roads with a new route. the new system should have these important strategies to help improve congestion 
+Measuring Traffic Flow: many researchers have been trying to find a good ways of measuring traffic flows as it’s very important because if we able to measure the traffic flow that would be very useful and would enable us to predict any traffic congestion and how to avoid it and find another routes. 
 	\section{System Design}
 	\subsection{Work Cycle}
 	\subsection{User Manual}
